# scrapy-sentry

./: .gitignore  Pipfile  README.md  pyproject.toml
example_project/: settings.py
scrapy_sentry/: utils.py
